feat(day4): free-text queries + prompt fusion + batch retrieval
- Added encode_free_text.py (CLAP text encoder for arbitrary prompts).
- Added predict_free_query.py (free-text -> mapper -> FAISS retrieval).
- Added prompt_fusion.py (combine multiple prompts via embedding average).
- Added batch_free.py (batch free-text prompts -> CSV of top-k).
- Wired configs to allow local CLAP checkpoint when available.

--- a/configs/embeddings.yaml
+++ b/configs/embeddings.yaml
@@ -2,7 +2,7 @@ device: "cpu"  # use "cpu" for now; switch to "cuda" later or keep "auto"
 
 model:
   name: "laion_clap"
-  # laion_variant: "2023"
+  laion_variant: "checkpoints/clap/clap_630k.pt"
   sbert_name: "sentence-transformers/all-MiniLM-L6-v2"
 
 paths:
