--- a/configs/base_real.yaml
+++ b/configs/base_real.yaml
@@ -2,7 +2,8 @@
 
 sample_rate: 44100        
 target_peak_db: -1.0
-trim_db: 40.0
+trim_db: 55.0
+apply_trim: false
 
 frame_size: 1024
 hop_size: 256
@@ -11,13 +12,13 @@ fmin_hz: 30.0
 fmax_hz: 12000.0
 
 f0:
-  fmin_hz: 80.0
-  fmax_hz: 500.0
+  fmin_hz: 60.0
+  fmax_hz: 900.0
   model: "torchcrepe"       
 
 vuv:
-  periodicity_thr: 0.35
-  energy_db_thr: -42.0
+  periodicity_thr: 0.50
+  energy_db_thr: -38.0
   min_voiced_len: 3
   head_tail_db: -35.0
   head_tail_win: 4
